# yet_another_fast_api_example

./: .gitignore  setup.cfg  setup.py
scripts/: test.py
