[metadata]
name = Test Api
author = Robert Ulmer
author_email = rulmer@lr.htlweiz.at
description = Create test api.
version = 1.0.0
url = https://github.com
keywords = logging
	pytest
	school
	file 
	api

license_file =
	LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires = 
	pytest
	flake8
	flake8-builtins
	flake8-docstrings
	flake8-eradicate
	flake8-isort
	flake8-spellcheck
	flake8-variables-names
	autopep8
	rope
	doq
	isort
	fastapi
	union
	uvicorn
	pydantic
scripts = 
	scripts/test.py


[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = tests
log_level = info
	
